--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -324,15 +324,13 @@
     <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule6.cs" />
     <Compile Include="Business\Client.Model\HPVReflexOrderRule141.cs" />
     <Compile Include="Business\Client.Model\HPVReflexOrderRule51.cs" />
-    <Compile Include="Business\Client.Model\HPVRuleValues.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrder.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderCollection.cs" />
     <Compile Include="Business\Client.Model\HPVStandingOrderRule141.cs" />
     <Compile Include="Business\Client.Model\HPVStandingOrderRule51.cs" />
     <Compile Include="Business\Client.Model\IdahoClientIdList.cs" />
     <Compile Include="Business\Client.Model\PlaceOfService.cs" />
     <Compile Include="Business\Client.Model\PlaceOfServiceCollection.cs" />
-    <Compile Include="Business\Client.Model\StandingOrderView.cs" />
-    <Compile Include="Business\Client.Model\StandingOrderViewCollection.cs" />
-    <Compile Include="Business\Client.Model\StandingOrderViewTypeEnum.cs" />
     <Compile Include="Business\ClientOrder.Model\ExternalOrderIds.cs" />
     <Compile Include="Business\ClientOrder.Model\ExternalOrderIdsCollection.cs" />
     <Compile Include="Business\Common\Block.cs" />
@@ -3046,9 +3044,6 @@
     <Compile Include="UI\Client\FacilityEntry.xaml.cs">
       <DependentUpon>FacilityEntry.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UI\Client\HPVRuleDialog.xaml.cs">
-      <DependentUpon>HPVRuleDialog.xaml</DependentUpon>
-    </Compile>
     <Compile Include="UI\Common\UserPreferencesList.xaml.cs">
       <DependentUpon>UserPreferencesList.xaml</DependentUpon>
     </Compile>
@@ -5026,10 +5021,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="UI\Client\FacilityEntry.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\Client\HPVRuleDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
