Refactor remaining HPVRules and collection, handle scan handler in Path Workspace when opening scan assignment dialog

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -324,13 +324,28 @@
     <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule6.cs" />
     <Compile Include="Business\Client.Model\HPVReflexOrderRule141.cs" />
     <Compile Include="Business\Client.Model\HPVReflexOrderRule51.cs" />
-    <Compile Include="Business\Client.Model\HPVRuleAge.cs" />
+    <Compile Include="Business\Client.Model\HPVRule.cs" />
     <Compile Include="Business\Client.Model\HPVRuleAge1.cs" />
     <Compile Include="Business\Client.Model\HPVRuleAge2.cs" />
     <Compile Include="Business\Client.Model\HPVRuleAge3.cs" />
     <Compile Include="Business\Client.Model\HPVRuleAge4.cs" />
     <Compile Include="Business\Client.Model\HPVRuleAge5.cs" />
     <Compile Include="Business\Client.Model\HPVRuleAgeCollection.cs" />
+    <Compile Include="Business\Client.Model\HPVRuleCollection.cs" />
+    <Compile Include="Business\Client.Model\HPVRuleEndoCervical1.cs" />
+    <Compile Include="Business\Client.Model\HPVRuleEndoCervical2.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResult1.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResult2.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResult3.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResult4.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResult5.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResult6.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResult7.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResult8.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResult9.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePAPResultCollection.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePreviousTesting1.cs" />
+    <Compile Include="Business\Client.Model\HPVRulePreviousTesting2.cs" />
     <Compile Include="Business\Client.Model\HPVStandingOrder.cs" />
     <Compile Include="Business\Client.Model\HPVStandingOrderCollection.cs" />
     <Compile Include="Business\Client.Model\HPVStandingOrderRule141.cs" />
